--- a/.woodpecker/release.yaml
+++ b/.woodpecker/release.yaml
@@ -1,12 +1,12 @@
 when:
-  - event: [pull_request, tag]
+  - event: [pull_request, tag, deployment]
   - event: push
     branch:
       - ${CI_REPO_DEFAULT_BRANCH}
 
 variables:
   - &buildx_plugin 'docker.io/woodpeckerci/plugin-docker-buildx:5.1.0'
-  - &repo 'woodpeckerci/autoscaler'
+  - &repo 'ghcr.io/crowci/crowci-autoscaler'
   - &platforms 'linux/arm/v7,linux/arm64/v8,linux/amd64,linux/ppc64le'
   - &golang_image 'docker.io/golang:1.23'
 
@@ -26,20 +26,22 @@ steps:
       tag: test
     when:
       - event: pull_request
+      - event: push
+        branch:
+          - ${CI_REPO_DEFAULT_BRANCH}
 
-  publish-next:
+  publish-dev:
     image: *buildx_plugin
     settings:
       dockerfile: Dockerfile
       repo: *repo
       platforms: *platforms
-      tag: next
-      username: woodpeckerbot
+      tag: dev
+      username: crowci-bot
       password:
-        from_secret: docker_password
+        from_secret: GITHUB_PKGS_TOKEN
     when:
-      branch: ${CI_REPO_DEFAULT_BRANCH}
-      event: push
+      event: deployment
 
   publish-tag:
     image: *buildx_plugin
@@ -48,8 +50,8 @@ steps:
       repo: *repo
       platforms: *platforms
       tag: [latest, '${CI_COMMIT_TAG}']
-      username: woodpeckerbot
+      username: crowci-bot
       password:
-        from_secret: docker_password
+        from_secret: GITHUB_PKGS_TOKEN
     when:
       event: tag
