--- a/.crow/release.yaml
+++ b/.crow/release.yaml
@@ -49,7 +49,7 @@ steps:
       dockerfile: Dockerfile
       repo: *repo
       platforms: *platforms
-      tag: [latest, '${CI_COMMIT_TAG}']
+      tag: ['${CI_COMMIT_TAG%%.*}', '${CI_COMMIT_TAG%.*}', '${CI_COMMIT_TAG}']
       username: crowci-bot
       password:
         from_secret: GITHUB_PKGS_TOKEN
