--- a/.crow/release.yaml
+++ b/.crow/release.yaml
@@ -1,3 +1,9 @@
+clone:
+  git:
+    image: docker.io/thegeeklab/wp-git-clone:1.0.14
+    settings:
+      tags: true
+
 when:
   - event: [pull_request, tag, deployment]
   - event: push
@@ -62,6 +68,8 @@ steps:
       - git sv current-version
       - git sv release-notes -t ${CI_COMMIT_TAG:-dev} -o CHANGELOG.md
       - cat CHANGELOG.md
+    when:
+      event: tag
 
   create_release:
     image: 'alpine:3.21'
