--- a/.crow/release.yaml
+++ b/.crow/release.yaml
@@ -15,6 +15,15 @@ variables:
   - &repo 'ghcr.io/crowci/crow-autoscaler'
   - &platforms 'linux/arm/v7,linux/arm64/v8,linux/amd64,linux/ppc64le'
   - &golang_image 'docker.io/golang:1.23-alpine3.21'
+  - publish_logins: &publish_logins
+      - registry: https://ghcr.io/v2/
+        username: crowci-bot
+        password:
+          from_secret: GITHUB_PKGS_TOKEN
+      - registry: https://index.docker.io/v1/
+        username: devxygmbh
+        password:
+          from_secret: docker_password
 
 steps:
   vendor:
@@ -22,7 +31,7 @@ steps:
     commands:
       - go mod vendor
 
-  dryrun:
+  build-image-dryrun:
     image: *buildx_plugin
     settings:
       dockerfile: Dockerfile
@@ -30,6 +39,8 @@ steps:
       repo: *repo
       platforms: *platforms
       tag: test
+      username: crowci-bot
+      logins: *publish_logins
     when:
       - event: pull_request
       - event: push
@@ -43,9 +54,7 @@ steps:
       repo: *repo
       platforms: *platforms
       tag: dev
-      username: crowci-bot
-      password:
-        from_secret: GITHUB_PKGS_TOKEN
+      logins: *publish_logins
     when:
       event: deployment
 
@@ -56,9 +65,7 @@ steps:
       repo: *repo
       platforms: *platforms
       tag: ['${CI_COMMIT_TAG%%.*}', '${CI_COMMIT_TAG%.*}', '${CI_COMMIT_TAG}']
-      username: crowci-bot
-      password:
-        from_secret: GITHUB_PKGS_TOKEN
+      logins: *publish_logins
     when:
       event: tag
 
