--- a/.crow/release.yaml
+++ b/.crow/release.yaml
@@ -85,7 +85,7 @@ steps:
         from_secret: ISSUE_TOKEN
     commands:
       - apk add -q --no-cache github-cli
-      - gh release create ${CI_COMMIT_TAG} --title "Crow CI Autoscaler ${CI_COMMIT_TAG}" --notes-file CHANGELOG.md
+      - gh release create ${CI_COMMIT_TAG} --title "${CI_COMMIT_TAG}" --notes-file CHANGELOG.md
     when:
       event: [tag]
       branch: ${CI_REPO_DEFAULT_BRANCH}
