--- a/.crow/release.yaml
+++ b/.crow/release.yaml
@@ -78,14 +78,10 @@ steps:
     when:
       event: tag
 
-  create_release:
-    image: 'alpine:3.21'
-    environment:
-      GITHUB_TOKEN:
-        from_secret: ISSUE_TOKEN
-    commands:
-      - apk add -q --no-cache github-cli
-      - gh release create ${CI_COMMIT_TAG} --title "${CI_COMMIT_TAG}" --notes-file CHANGELOG.md
-    when:
-      event: [tag]
-      branch: ${CI_REPO_DEFAULT_BRANCH}
+  'Create release':
+  image: docker.io/woodpeckerci/plugin-release:0.2.3
+  settings:
+    files:
+      - CHANGELOG.md
+    api_key:
+      from_secret: codeberg_bot_token
